<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bluetooth</string>
    <string name="str_title_device">Device Manager</string>
    <string name="title_phone">Bluetooth Phone</string>
    <string name="title_music">Bluetooth Music</string>
    <string name="title_address">Address Book</string>
    <string name="title_contact">Contact</string>
    <string name="title_call_log">Call Log</string>
    <string name="title_dial">Call interface</string>
    <string name="bluetooth_switch">Bluetooth Switch</string>
    <string name="bluetooth_name">Bluetooth Name</string>
    <string name="bluetooth_rename">Rename</string>
    <string name="bluetooth_scan">Scan</string>
    <string name="str_finish">Finish</string>
    <string name="choose_options">Please select an action</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="unpair">Unpair</string>
    <string name="pair_status_pair">Pair</string>
    <string name="pair_status_paired">Paired</string>
    <string name="pair_status_pairing">Pairing</string>
    <string name="pair_status_unpaired">Unpaired</string>
    <string name="pair_status_failed">Pair failed</string>
    <string name="pair_status_unknown">Unknown</string>
    <string name="conn_status_connected">Connected</string>
    <string name="conn_status_connecting">Connecting</string>
    <string name="conn_status_not">Not Connected</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_hang_up">Hang up</string>
    <string name="str_answer">Answer</string>
    <string name="str_unknown_call">Unknown call</string>
    <string name="str_not_connect_warn">Bluetooth device not connected</string>
    <string name="str_unknown_device">Unknown device</string>
    <string name="str_no_number">Please enter the number</string>
    <string name="str_contact_total1">There are a total of</string>
    <string name="str_contact_total2">call records</string>
    <string name="audio_in_car">Audio in car</string>
    <string name="audio_in_phone">Audio in phone</string>
    <string name="status_incoming">Incoming</string>
    <string name="status_outgoing">OutGoing</string>
    <string name="str_contact_search">Contact Search</string>
    <string name="str_connect_on_failure_tips">Connection failed, please check if the device\'s Bluetooth
        is enabled or if the device needs to enable Bluetooth transmission</string>
    <string name="str_connected">Bluetooth connection successful</string>
    <string name="str_unconnected">Bluetooth disconnected</string>
    <string name="str_block_connection_tips">Currently in Bluetooth transmission mode, unable to connect to phone</string>
</resources>
